v.1.1.4
	Bug Fix - When you have unset edit and unset delete in your actions and also you have insert one or more add_action, the column Actions disapeared.
v.1.1.3
	Changing the functionality of the private method _theme_view. Now it's not dependent with the Loader of codeigniter.
		So every template controller, HMVC, e.t.c. can work well with grocery CRUD now.
	Changing the library core and make it more minimal and more powerful.
	New method unset_jquery. Very useful, if you already have the jquery library at your basic template.This is good to avoid jquery conflicts.
	BUG fix - No more conflicts between flexigrid tables. There was a cookie conflict between different lists.
	BUG fix - The set relation now works if you add the same table name twice.
	Renaming the folder public to assets.
	Grocery CRUD is now ready to be a spark.
	Changing the functionality and the javascript of the uploader. There is no need to have $config['enable_query_strings'] set to true anymore.
v.1.1.2
	Renaming the label "Tools" to "Actions".
	Creation of new field type : "hidden" to add hidden fields. You can also add a value to the hidden field.
	Updating Javascripts: datatables, file_uploader.
	Disable sorting of the row "Actions" on datatables theme and fix the actions hover on paging that didn't work.
	Adding new feature/function add_action. Adds icons and urls for custom "actions".
	Adding .htaccess files to the views of themes for security reasons.
v.1.1
	Bug Fix - Datetime picker now works fine to an empty input. It also works fine to the add operation.
	When the edit and the delete is unset then dissapear the column Tools.
	The default library/model is not in a third party but has been moved in the main codeigniter foldering for better functionality and to use it in both CI 1.7.x and CI 2.0.x .
	Delete the grocery Exceptions Library. Everyone can create his own exception library . It was just an example.
	Add new jquery version 1.6.2 and renewing some plugins.