@@ -1,5 +1,6 @@
 v.1.1.4
 	Bug Fix - When you have unset edit and unset delete in your actions and also you have insert one or more add_action, the column Actions disapeared.
+	Adding a new field type named "password". This is a simple transformation of the field input from text to password and it hides the password from the list grid.
 v.1.1.3
 	Changing the functionality of the private method _theme_view. Now it's not dependent with the Loader of codeigniter.
 		So every template controller, HMVC, e.t.c. can work well with grocery CRUD now.
